--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Your awesome title
-email: your-email@domain.com
+title: Wataru ENDO
+email: wendo@eidos.ic.i.u-tokyo.ac.jp
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Web site of Wataru ENDO, a master's student in the University of Tokyo.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://endowataru.github.io" # the base hostname & protocol for your site
+#twitter_username: jekyllrb
+github_username:  endowataru
 
 # Build settings
 markdown: kramdown
