--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Wataru ENDO
 email: wendo@eidos.ic.i.u-tokyo.ac.jp
 description: > # this means to ignore newlines until "baseurl:"
-  Web site of Wataru ENDO, a master's student in the University of Tokyo.
+  Web site of Wataru ENDO, a doctoral student in the University of Tokyo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://endowataru.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
