--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Wataru ENDO
+title: Wataru Endo
 email: wendo@eidos.ic.i.u-tokyo.ac.jp
 description: > # this means to ignore newlines until "baseurl:"
-  Web site of Wataru ENDO, a doctoral student in the University of Tokyo.
+  Web site of Wataru Endo.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://endowataru.github.io" # the base hostname & protocol for your site
 #twitter_username: jekyllrb
